# bibliographer

./: .gitignore  bibliographer.conf  bibliographer.toml  bibliographer.toml.example  pyproject.toml  readme.md  tasks.py  todo.md
.github/workflows/: cog.yml  publish.yml
docs/: apis.md  sources.md
src/bibliographer/: __init__.py  cardcatalog.py  enrich.py  populate.py
src/bibliographer/bookish/: enrich.py  manual.py  populate.py
src/bibliographer/cli/: __init__.py  bibliographer.py  bookish.py  util.py
src/bibliographer/config/: __init__.py
src/bibliographer/docs/: exportKindleLibrary.js  initital-prompt.md
src/bibliographer/hugo/: __init__.py
src/bibliographer/ratelimiter/: __init__.py
src/bibliographer/sources/: add.py  amazon_browser.py  audible.py  covers.py  googlebooks.py  kindle.py  librofm.py  manual.py  openlibrary.py  raindrop.py  wikipedia.py
src/bibliographer/util/: isbnutil.py  jsonutil.py  slugify.py
tests/: test_cardcatalog.py  test_enrich.py  test_kindle_ingest.py  test_openlibrary.py  test_raindrop.py  test_slugify.py
tests/data/: kindle-library.json  raindrop_highlights.json
tests/data/openlibrary/: valid_isbn_9780316769174.json
