[project]
name = "bibliographer"
version = "0.1.0"
description = "Compile a list of books you've read"
readme = "pysrc/readme.md"
requires-python = ">=3.12"
dependencies = [
    "audible",
    "requests>=2.32.3",
    "black>=24.0",
    "mypy>=1.14",
    "types-requests>=2.32.0.20241016",
]

[project.scripts]
bibliographer = "bibliographer.cli.bibliographer:wrapped_main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120

# [tool.setuptools]
# packages = ["find:"]
# package-dir = {"" = "pysrc"}

[tool.setuptools.package-data]
cli = ["py.typed"]

[tool.uv.sources]
bibliographer = { workspace = true }

[dependency-groups]
dev = [
    "bibliographer",
]
