[project]
name = "bibliographer"
version = "2.0.1"
description = "Compile a list of books you've read"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = ["audible", "requests>=2.32.3"]

[project.scripts]
bibliographer = "bibliographer.cli.bibliographer:wrapped_main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
cli = ["py.typed"]

[tool.uv.sources]
bibliographer = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# F is on by default (includes F401 unused-import).
# Enable import sorting/organizing (isort rules like I001).
extend-select = ["I"] # or ["I001"]

[dependency-groups]
dev = ["bibliographer[dev]", "ruff>=0.14.9"]

[project.optional-dependencies]
dev = [
    "cogapp",
    "invoke",
    "mypy>=1.14",
    "pytest>=8.0",
    "types-requests>=2.32.0.20241016",
]
